RESOLVED FIXED 247273
Fix asserts when running SiteIsolation.ProcessIdentifiers API test in debug builds
https://bugs.webkit.org/show_bug.cgi?id=247273
Summary Fix asserts when running SiteIsolation.ProcessIdentifiers API test in debug b...
Alex Christensen
Reported 2022-10-31 11:18:42 PDT
It's incomplete and not great, but the test shouldn't assert.
Attachments
Radar WebKit Bug Importer
Comment 1 2022-10-31 11:18:59 PDT
Alex Christensen
Comment 2 2022-10-31 11:19:40 PDT
EWS
Comment 3 2022-10-31 11:33:10 PDT
Committed 256162@main (b86e44e44d0e): <https://commits.webkit.org/256162@main> Reviewed commits have been landed. Closing PR #5964 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.