Fix asserts when running SiteIsolation.ProcessIdentifiers API test in debug builds https://bugs.webkit.org/show_bug.cgi?id=247273 rdar://101766451

Reviewed by Chris Dumez.

* Source/WebKit/UIProcess/WebFrameProxy.cpp:
(WebKit::WebFrameProxy::swapToProcess):

Canonical link: https://commits.webkit.org/256162@main